@@ -1,7 +1,9 @@
 package Programs.com.example.FileReader;
 
 import java.io.IOException;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -10,7 +12,7 @@ public abstract class AbstractFileReader {
     private final Path filePath;
 
     protected AbstractFileReader(String filePath) {
-        this.filePath = Path.of(filePath);
+        this.filePath = Paths.get(filePath);
     }
 
     public String getPath() {
